# internal/api/services/systems.go
@@ -2,7 +2,6 @@ package services
 
 import (
 	"context"
-	"net/http"
 
 	"github.com/zeiss/typhoon/internal/api/models"
 	"github.com/zeiss/typhoon/internal/utils"
@@ -80,18 +79,4 @@ func (a *ApiHandlers) CreateSystem(ctx context.Context, req openapi.CreateSystem
 	}
 
 	return openapi.CreateSystem201JSONResponse(res), nil
-}
-
-// GetSystemOperator ...
-func (a *ApiHandlers) GetSystemOperator(ctx context.Context, req openapi.GetSystemOperatorRequestObject) (openapi.GetSystemOperatorResponseObject, error) {
-	system, err := a.systems.GetSystem(ctx, req.SystemId)
-	if err != nil {
-		return nil, err
-	}
-
-	if system.OperatorID == nil {
-		return openapi.GetSystemOperatordefaultJSONResponse(openapi.GetGroupdefaultJSONResponse{StatusCode: http.StatusNotFound, Body: openapi.ErrorNotFound("could not find an operator")}), nil
-	}
-
-	return openapi.GetSystemOperator200JSONResponse(openapi.Operator{Id: utils.PtrUUID(system.Operator.ID), Name: system.Operator.Name}), nil
 }
